--- a/src/app/templates/app/productos.html
+++ b/src/app/templates/app/productos.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Productos - La Caja de Pandora</title>
+    <title>Productos - Fábrica de masas</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="{% static 'core/css/styles.css' %}" rel="stylesheet">
 </head>
