--- a/src/app/templates/app/producto_form.html
+++ b/src/app/templates/app/producto_form.html
@@ -1,5 +1,7 @@
 <!-- app/templates/app/producto_form.html -->
 
+{% extends 'app/base.html' %}
+
 {% load static %}
 <!DOCTYPE html>
 <html lang="es">
