Mostrando nuevamente productos

--- a/src/app/templates/app/about.html
+++ b/src/app/templates/app/about.html
@@ -1,2 +1,21 @@
 {% extends 'app/base.html' %}
+ <title>Un poco sobre mí</title>
+{% block content %}
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <h1>Sobre mi</h1>
+            <p>¡Hola! Soy una docente apasionado desarrollar software con la idea de aprender muchso sobre Python. Me encanta enseñar, pero me llama la atención el data sience. Tengo experiencia como docente en la enseñanza de programación y he impartido cursos a estudiantes de todos los niveles, desde principiantes hasta avanzados.</p>
+            <p>Me gusta trabajar en equipo y colaborar con otros desarrolladores para crear soluciones innovadoras y eficientes. Siempre estoy buscando nuevas formas de mejorar mis habilidades y aprender nuevas tecnologías.</p>
+            <p>Cuando no estoy programando, me gusta leer.</p>
+            <p>Creo que nunca es tarde para aprender, y nunca se es muy viejo para intentarlo, más vale morir en el intento, que vivir sin haberlo intentado.</p>
+        </div>
+    </div>
+    <div>
+        <img src="{% static 'app/img/logo.png' %}" alt="imagen" class="img-fluid rounded shadow-lg">
+    </div>
+</div>
+{% endblock %}
+
+
        
