--- a/src/app/templates/app/base.html
+++ b/src/app/templates/app/base.html
@@ -35,7 +35,7 @@
         {% include 'app/componentes/footer.html' %}
         {% block script %}
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-            <script src="{% static 'core/js/scripts.js' %}"></script>
+            <script src="{% static 'app/js/scripts.js' %}"></script>
         {% endblock script %}
     </body>
 </html>
