--- a/src/app/templates/app/componentes/navbar.html
+++ b/src/app/templates/app/componentes/navbar.html
@@ -1,25 +1,24 @@
+
+{% load static %}
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container px-5">
-        <a class="navbar-brand" href="#!">Fábrica de masas</a>
+        <a class="navbar-brand" href="{% url 'app:index' %}">Fábrica de masas</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                <li class="nav-item"><a class="nav-link" href="{% url 'app:index' %}">Inicio</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'app:productos' %}">Productos</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'app:about' %}">Acerca de mí</a></li>
                 {% if user.is_authenticated %}
-                    <li class="nav-item"><a class="nav-link" href="{% url 'app:index' %}">Inicio</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{% url 'app:productos' %}">Productos</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{% url 'app:about' %}">Acerca de mí</a></li>
                     <li class="nav-item">
-                        <form action="{% url 'app:login' %}" method="post">
+                        <form action="{% url 'app:logout' %}" method="post" style="display: inline;">
                             {% csrf_token %}
-                            <button class="nav-link btn btn-link" type="submit">Login</button>
+                            <button class="nav-link btn btn-link" type="submit" >Cerrar sesión</button>
                         </form>
                     </li>
-
                 {% else %}
-                    <li class="nav-item"><a class="nav-link" href="{% url 'app:about' %}">Acerca de </a></li>
-                    <li class="nav-item"><a class="nav-link" href="{% url 'app:login' %}">Login</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'app:login' %}">Iniciar sesión</a></li>
                 {% endif %}
-
             </ul>
         </div>
     </div>
