--- a/src/app/templates/app/componentes/navbar.html
+++ b/src/app/templates/app/componentes/navbar.html
@@ -1,23 +1,43 @@
-
 {% load static %}
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container px-5">
+        <!-- Logo de la barra de navegación -->
         <a class="navbar-brand" href="{% url 'app:index' %}">Fábrica de masas</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+        
+        <!-- Botón para dispositivos móviles -->
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Abrir menú de navegación">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        
+        <!-- Menú de navegación -->
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                <li class="nav-item"><a class="nav-link" href="{% url 'app:index' %}">Inicio</a></li>
-                <li class="nav-item"><a class="nav-link" href="{% url 'app:productos' %}">Productos</a></li>
-                <li class="nav-item"><a class="nav-link" href="{% url 'app:about' %}">Acerca de mí</a></li>
+                <!-- Enlace al inicio -->
+                <li class="nav-item">
+                    <a class="nav-link {% if request.resolver_match.url_name == 'index' %}active{% endif %}" href="{% url 'app:index' %}" aria-current="page">Inicio</a>
+                </li>
+                <!-- Enlace a productos -->
+                <li class="nav-item">
+                    <a class="nav-link {% if request.resolver_match.url_name == 'productos' %}active{% endif %}" href="{% url 'app:productos' %}">Productos</a>
+                </li>
+                <!-- Enlace a Acerca de mí -->
+                <li class="nav-item">
+                    <a class="nav-link {% if request.resolver_match.url_name == 'about' %}active{% endif %}" href="{% url 'app:about' %}">Acerca de mí</a>
+                </li>
+                <!-- Lógica de autenticación -->
                 {% if user.is_authenticated %}
+                    <!-- Botón para cerrar sesión -->
                     <li class="nav-item">
-                        <form action="{% url 'app:logout' %}" method="post" style="display: inline;">
+                        <form action="{% url 'app:logout' %}" method="post">
                             {% csrf_token %}
-                            <button class="nav-link btn btn-link" type="submit" >Cerrar sesión</button>
+                            <button class="btn nav-link text-white" type="submit">Cerrar sesión</button>
                         </form>
                     </li>
                 {% else %}
-                    <li class="nav-item"><a class="nav-link" href="{% url 'app:login' %}">Iniciar sesión</a></li>
+                    <!-- Enlace para iniciar sesión -->
+                    <li class="nav-item">
+                        <a class="nav-link {% if request.resolver_match.url_name == 'login' %}active{% endif %}" href="{% url 'app:login' %}">Iniciar sesión</a>
+                    </li>
                 {% endif %}
             </ul>
         </div>
