--- a/src/app/templates/app/productos.html
+++ b/src/app/templates/app/productos.html
@@ -1,5 +1,3 @@
-<!-- core/templates/core/productos.html -->
-
 {% load static %}
 <!DOCTYPE html>
 <html lang="es">
@@ -15,6 +13,8 @@
 
     <div class="container mt-5">
         <h1 class="mb-4">Nuestros Productos</h1>
+
+        {% if productos %}
         <div class="row">
             {% for producto in productos %}
             <div class="col-md-4 mb-4">
@@ -22,18 +22,17 @@
                     <img src="{{ producto.imagen.url }}" class="card-img-top" alt="{{ producto.nombre }}">
                     <div class="card-body">
                         <h5 class="card-title">{{ producto.nombre }}</h5>
-                        <p class="card-text">{{ producto.descripcion }}</p>
-                        <p class="card-text"><strong>Precio: </strong>${{ producto.precio }}</p>
-                        {% if producto.disponibilidad %}
-                        <p class="text-success">Disponible</p>
-                        {% else %}
-                        <p class="text-danger">No Disponible</p>
-                        {% endif %}
+
+                        <!-- Botón para ver los detalles -->
+                        <a href="{% url 'app:producto_detalle' producto.id %}" class="btn btn-info">Ver detalles</a>
                     </div>
                 </div>
             </div>
             {% endfor %}
         </div>
+        {% else %}
+        <p>No hay productos disponibles en este momento.</p>
+        {% endif %}
     </div>
 
     {% include 'app/componentes/footer.html' %}
