--- a/src/app/templates/app/componentes/navbar.html
+++ b/src/app/templates/app/componentes/navbar.html
@@ -18,7 +18,7 @@
                 </li>
                 <!-- Enlace a productos -->
                 <li class="nav-item">
-                    <a class="nav-link {% if request.resolver_match.url_name == 'productos' %}active{% endif %}" href="{% url 'app:productos' %}">Productos</a>
+                    <a class="nav-link {% if request.resolver_match.url_name == 'productos' %}active{% endif %}" href="{% url 'app:productos-lista' %}">Productos</a>
                 </li>
                 <!-- Enlace a Acerca de mí -->
                 <li class="nav-item">
@@ -28,12 +28,11 @@
                 {% if user.is_authenticated %}
                     <!-- Enlace al panel de administración -->
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'app:editar_categoria' 1 %}">Editar categoría</a>
+                        <a class="nav-link {% if request.resolver_match.url_name == 'listar_categorias' %}active{% endif %}" href="{% url 'app:listar_categorias' %}">Editar Categorías</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'app:editar_producto' 1 %}">Editar producto</a>
+                        <a class="nav-link {% if request.resolver_match.url_name == 'listar_productos' %}active{% endif %}" href="{% url 'app:listar_productos' %}">Editar productos</a>
                     </li>
-                    
 
                     <!-- Botón para cerrar sesión -->
                     <li class="nav-item">
