--- a/src/app/templates/app/listar_categorias.html
+++ b/src/app/templates/app/listar_categorias.html
@@ -1,6 +1,17 @@
 {% extends 'app/base.html' %}
 
 {% block content %}
+
+{% if messages %}
+<div class="container mt-3">
+    {% for message in messages %}
+    <div class="alert alert-{{ message.tags }}">
+        {{ message }}
+    </div>
+    {% endfor %}
+</div>
+{% endif %}
+
 <div class="container mt-5">
     <h1>Lista de Categorías</h1>
     <table class="table table-striped">
