--- a/src/app/templates/app/listar_categorias.html
+++ b/src/app/templates/app/listar_categorias.html
@@ -1,17 +1,6 @@
 {% extends 'app/base.html' %}
 
 {% block content %}
-
-{% if messages %}
-<div class="container mt-3">
-    {% for message in messages %}
-    <div class="alert alert-{{ message.tags }}">
-        {{ message }}
-    </div>
-    {% endfor %}
-</div>
-{% endif %}
-
 <div class="container mt-5">
     <h1>Lista de Categorías</h1>
     <table class="table table-striped">
@@ -41,5 +30,10 @@
             {% endfor %}
         </tbody>
     </table>
+
+    <!-- Botón para crear una nueva categoría -->
+    <div class="mt-3">
+        <a href="{% url 'app:crear_categoria' %}" class="btn btn-success">Crear nueva categoría</a>
+    </div>
 </div>
 {% endblock %}
